Bug 280913 - Openconnect VPN doesn't connect; Shell commands work
Summary: Openconnect VPN doesn't connect; Shell commands work
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Ilia Kats
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-28 06:33 UTC by Volker Fröhlich
Modified: 2011-08-28 19:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The output of openconnect -v (3.95 KB, text/plain)
2011-08-28 06:33 UTC, Volker Fröhlich
Details
patch to remove empty secrets from map (2.54 KB, patch)
2011-08-28 14:05 UTC, Ilia Kats
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Fröhlich 2011-08-28 06:33:09 UTC
Created attachment 63187 [details]
The output of openconnect -v

Version:           unspecified (using KDE 4.6.5) 
OS:                Linux

I can't connect to my company's VPN from the network management applet, but I can do so using the openconnect command.

Reproducible: Always

Steps to Reproduce:
I'm on Fedora 15 and rebuilt and installed the kde-plasma-networkmanagement package from Fedora 16 (snapshot 20110812git.nm09).

I then created a new openconnect connection, just specifying the gateway in the form. When I connect to that, I can download available group information and enter my username and password. The groups are obtained fine. If I use wrong credentials, the form says "Login failed". If I use the correct data though, the form disappears and the connection fails.

The messages log says:

Aug 28 08:20:11 fedora15 NetworkManager[1113]: <error> [1314512411.499748] [nm-vpn-connection.c:865] get_secrets_cb(): Failed to request VPN secrets #3: (3) Secret xmlconfig value was empty

Actual Results:  
Doesn't connect to VPN

Expected Results:  
Connect to the VPN

So I tried to connect using openconnect from the shell:

openconnect -v vpn.meduniwien.ac.at

That worked just fine after setting the route.
Comment 1 Ilia Kats 2011-08-28 14:05:11 UTC
Created attachment 63189 [details]
patch to remove empty secrets from map

Can you try the attached patch?
Comment 2 Volker Fröhlich 2011-08-28 19:36:47 UTC
Hooray! It's working. The patch solves it for me.
Comment 3 Ilia Kats 2011-08-28 19:40:05 UTC
Git commit 63916e0f32b79b2d44cd1994608400effbcc8ff7 by Ilia Kats.
Committed on 28/08/2011 at 21:37.
Pushed by iliakats into branch 'nm09'.

don't send empty OpenConnect secrets to NM.

BUG: 280913

M  +1    -1    plasma_nm_version.h
M  +13   -5    vpnplugins/openconnect/openconnectauth.cpp

http://commits.kde.org/networkmanagement/63916e0f32b79b2d44cd1994608400effbcc8ff7