don't send empty OpenConnect secrets to NM.

BUG: 280913